--- a/Lab1/Makefile
+++ b/Lab1/Makefile
@@ -3,5 +3,6 @@
 all:
 	gcc TCP_Client.c -o TCP_Client
 	gcc TCP_Server.c -o TCP_Server
+	gcc populate.c -o populate
 clean:
-	rm -f *~_Client _Server
+	rm -f *~_Client _Server populate
